# minimax

./: .gitmodules  README.md
agent/: .env.example  README.md  package-lock.json  package.json
agent/src/: BattleAgent.ts  config.ts  index.ts  server.ts
agent/src/abis/: BattleArena.json  LPBattleVaultV4.json  LPFeeBattleV4.json  Leaderboard.json  PoolManager.json
agent/src/analyzers/: PoolAnalyzer.ts
agent/src/commands/: analyze.ts  demo.ts  settle.ts  status.ts
agent/src/integrations/: ArcIntegration.ts  CrossChainEntryAgent.ts  LiFiIntegration.ts  index.ts
agent/src/tests/: arc.test.ts  crosschain-agent.test.ts  integration.test.ts  lifi.test.ts
agent/src/utils/: logger.ts  txCollector.ts
contract/: README.md  foundry.toml
contract/script/: DeployBattleArena.s.sol  RedeployArena.s.sol  RunBattle.s.sol  Setup.s.sol  SetupArbSepolia.s.sol
contract/src/: LPBattleVaultV4.sol  LPFeeBattleV4.sol
contract/src/adapters/: CamelotAdapter.sol  UniswapV4Adapter.sol
contract/src/core/: BattleArena.sol
contract/src/hooks/: BattleVaultHook.sol
contract/src/interfaces/: IShared.sol
contract/src/libraries/: ArbitrumSepoliaConstants.sol  PoolUtilsV4.sol  (+3 more)
contract/test/: BattleArenaTest.t.sol  LPBattleVaultV4Extended.t.sol  LPBattleVaultV4Test.t.sol
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
stylus/: Cargo.toml  README.md
stylus/battle_scoring/: Cargo.toml
stylus/leaderboard/: Cargo.toml
stylus/leaderboard/src/: lib.rs  main.rs
(+53 files in other folders)
