[package]
name = "leaderboard"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "1.0.1", default-features = false }
stylus-sdk = "0.10.0"
alloy-sol-types = { version = "1.0.1", default-features = false }

[lib]
crate-type = ["lib", "cdylib"]

[features]
export-abi = ["stylus-sdk/export-abi"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("contract-client-gen"))'] }
